BIG refactor, not complete, but functional

--- a/fdgs_background.html
+++ b/fdgs_background.html
@@ -5,11 +5,12 @@
  * in the LICENSE file.
 -->
 <html>
-  <head>
-  	<script src="jquery-1.7.2.min.js"></script>
-    <script src="fdgs_background.js"></script>
-  	<script src="kindle_import.js"></script>
-  </head>
-  <body>
-  </body>
+    <head>
+        <script src="jquery-1.7.2.min.js"></script>
+        <script src="config.js"></script>
+        <script src="fdgs_background.js"></script>
+        <script src="kindle_import.js"></script>
+    </head>
+    <body>
+    </body>
 </html>
