--- a/fdgs_background.html
+++ b/fdgs_background.html
@@ -8,6 +8,7 @@
     <head>
         <script src="jquery-1.7.2.min.js"></script>
         <script src="config.js"></script>
+        <script src="common.js"></script>
         <script src="fdgs_background.js"></script>
         <script src="kindle_import.js"></script>
     </head>
