--- a/options.html
+++ b/options.html
@@ -5,7 +5,9 @@
         <link rel="stylesheet" href="options.css" type="text/css">
         <script src="jquery-1.7.2.min.js"></script>
         <script src="config.js"></script>
+        <script src="common.js"></script>
         <script src="options.js"></script>
+        <script src="kindle_import.js"></script>
     </head>
     <body>
         <div id="content">
