Default to not syncing highlights when first installed

--- a/options.html
+++ b/options.html
@@ -33,6 +33,7 @@
                     <div class='option' style='text-align: right;'>
                         <button id="import_now">Import now</button>
                     </div>
+                    <div class='instruction'><b>*A note on Kindle highlight privacy:</b> All of your Kindle highlights (regardless of whether they are marked public or private on Amazon) will be synced to Findings and default to public visibility. You can set the privacy of an individual clip by clicking the lock icon.</div>
                 </div>
                 <div class='options_group'>
                     <h3>Keyboard Shortcuts</h3>
