35998117 - disable kindle sync in bookmarklet

--- a/options.html
+++ b/options.html
@@ -14,7 +14,12 @@
             <span class='heading'><img class='logo' src='icon-48x48.png'/> Findings for Google Chrome</span>
             <div id='options'>
                 <div class='options_group'>
-                    <h3>Amazon Kindle Import</h3>
+                    <h3>Amazon Kindle Import</h3><br/>
+    <div style='line-height: 18pt;'><span style='font-weight: bold'>Kindle Highlight Import Errors</span><br/><br/>
+    The Findings team is aware of an error with Kindle highlight importing and we are working on a fix for it. We appreciate your patience and we will let our users know as soon as there are any developments. In the meantime, web clipping is still working as usual. We encourage you to try it out!<br/><br/>
+    <div style='text-align: right;'>More questions? Email <a href='mailto:feedback@findings.com'>feedback@findings.com</a></div><br/>
+    </div>
+<!--
                     <div class='instruction'>Control how often your kindle highlights are imported to Findings.</div>
                     <div class='option'>
                         <span class='option_item'>Import my Kindle highlights</span>
@@ -34,6 +39,7 @@
                         <button id="import_now">Import now</button>
                     </div>
                     <div class='instruction'><b>*A note on Kindle highlight privacy:</b> All of your Kindle highlights (regardless of whether they are marked public or private on Amazon) will be synced to Findings and default to public visibility. You can set the privacy of an individual clip by clicking the lock icon.</div>
+-->
                 </div>
                 <div class='options_group'>
                     <h3>Keyboard Shortcuts</h3>
