--- a/options.html
+++ b/options.html
@@ -14,42 +14,10 @@
             <span class='heading'><img class='logo' src='icon-48x48.png'/> Findings for Google Chrome</span>
             <div id='options'>
                 <div class='options_group'>
-                    <h3>Amazon Kindle Import</h3><br/>
-    <div style='line-height: 18pt;'><span style='font-weight: bold'>Kindle Highlight Import Errors</span><br/><br/>
-    The Findings team is aware of an error with Kindle highlight importing and we are working on a fix for it. We appreciate your patience and we will let our users know as soon as there are any developments. In the meantime, web clipping is still working as usual. We encourage you to try it out!<br/><br/>
+    <div style='line-height: 18pt;'><span style='font-weight: bold'>AN UPDATE ON OUR AMAZON KINDLE SYNC FEATURE</span><br/><br/>
+    We no longer support importing highlights from Amazon Kindle. Please see <a href='http://blog.findings.com/post/31804403905/an-update-on-our-amazon-kindle-sync-feature' target='_new'>our blog post</a> for more detail.<br/><br/>
     <div style='text-align: right;'>More questions? Email <a href='mailto:feedback@findings.com'>feedback@findings.com</a></div><br/>
     </div>
-<!--
-                    <div class='instruction'>Control how often your kindle highlights are imported to Findings.</div>
-                    <div class='option'>
-                        <span class='option_item'>Import my Kindle highlights</span>
-                        <select id="amazon_import_interval">
-                            <option value="2419200000">Once a month</option>
-                            <option value="604800000">Once a week</option>
-                            <option value="86400000" selected>Once a day</option>
-                            <option value="43200000">Twice a day</option>
-                            <option value="-1">Never</option>
-                        </select>
-                    </div>
-                    <div class='option'>
-                        <span class='option_item'></span><input type="checkbox" id="amazon_desktop_notifications_enabled" checked="">
-                            Show a desktop notiification
-                    </div>
-                    <div class='option' style='text-align: right;'>
-                        <button id="import_now">Import now</button>
-                    </div>
-                    <div class='instruction'><b>*A note on Kindle highlight privacy:</b> All of your Kindle highlights (regardless of whether they are marked public or private on Amazon) will be synced to Findings and default to public visibility. You can set the privacy of an individual clip by clicking the lock icon.</div>
--->
-                </div>
-<!--
-                <div class='options_group'>
-                    <h3>Keyboard Shortcuts</h3>
-                    <div class='instruction'>Use a key combination to quickly clip text to Findings.</div>
-                    <div class='option'>
-                        <span class='option_item'>Quick clip key</span> <input id='quick_clip_key' maxlength='1' readonly='readonly'/>
-                    </div>
-                </div>
--->
             </div>
         </div>
     </body>
