context menu clip

--- a/fdgs_background.html
+++ b/fdgs_background.html
@@ -10,7 +10,7 @@
         <script src="config.js"></script>
         <script src="common.js"></script>
         <script src="fdgs_background.js"></script>
-        <script src="kindle_import.js"></script>
+        <script src="context_menu.js"></script>
     </head>
     <body>
     </body>
