Highlighting whitelist - (update options page)

--- a/src/options.html
+++ b/src/options.html
@@ -15,9 +15,11 @@
             <div id='options'>
                 <div class='options_group'>
     <div style='line-height: 18pt;'><span style='font-weight: bold'>EXPERIMENTAL: Inline Highlighting</span><br/><br/>
-    We're experimenting with a new feature in the chrome extentsion - inline highlighting of text that's been clipped to Findings.
+    We're experimenting with a new feature in the chrome extension - inline highlighting of text that's been clipped to Findings.
     <br/><br/>
-    With this feature enabled, whenever you navigate to an original source page from findings.com, or from an fnd.gs link, we'll highlight any of the publically visible clips that have been captured from that page.
+    With this feature enabled, whenever you navigate to an original source page from findings.com, or from an fnd.gs link, we'll highlight any of the publicly visible clips that have been captured from that page.
+    <br/><br/>
+    As of v0.51, we'll also automatically highlight clips on pages from sites that are popular among findings users, whether you got to the site via findings.com or not.
     <br/><br/>
     <label> <input type='checkbox' id='inline_highlighting_enabled'> Enable Inline Highlighting </label>
     </div>
